--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/react-dom": "18.2.18",
     "typescript": "5.3.3"
   },
+  "overrides": {
+    "msgpackr": "1.11.8"
+  },
   "manifest": {
     "permissions": [
       "cookies",
