--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "5.3.3"
   },
   "overrides": {
-    "msgpackr": "1.11.8"
+    "msgpackr": "1.11.8",
+    "content-security-policy-parser": "0.6.0"
   },
   "manifest": {
     "permissions": [
