🚀chore: 添加ESLint和Prettier配置并格式化代码
重构代码以符合ESLint规则
统一代码风格和格式化
更新package.json添加lint和format脚本
添加ESLint和Prettier相关依赖

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "displayName": "Cookie Manager Pro",
   "version": "1.1.0",
   "description": "高级Cookie管理，支持白名单/黑名单功能和选择性Cookie清除",
-
+  "type": "module",
   "packageManager": "npm@10.0.0",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css}\""
   },
   "dependencies": {
     "@plasmohq/storage": "^1.10.0",
@@ -21,6 +25,16 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "prettier": "^3.8.1",
     "typescript": "5.3.3"
   },
   "overrides": {
