--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,14 +15,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "~*": [
-        "./*"
-      ]
+      "~*": ["./*"]
     }
   },
-  "include": [
-    ".plasmo/index.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": [".plasmo/index.d.ts", "**/*.ts", "**/*.tsx"]
 }
