--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^17.3.0",
+    "happy-dom": "^20.6.0",
     "jsdom": "^28.0.0",
     "prettier": "^3.8.1",
     "typescript": "5.3.3",
