--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "msgpackr": "1.11.8",
     "content-security-policy-parser": "0.6.0",
     "svelte": "4.2.19",
-    "esbuild": "0.25.0"
+    "esbuild": "0.25.0",
+    "yaml": "2.7.1"
   },
   "manifest": {
     "permissions": [
