feat: 新增隐私保护功能与定时清理选项

--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
       "cookies",
       "storage",
       "tabs",
-      "browsingData"
+      "browsingData",
+      "alarms"
     ],
     "host_permissions": [
       "https://*/*",
