--- a/package.json
+++ b/package.json
@@ -23,45 +23,44 @@
     "changelog:latest": "git-cliff --latest"
   },
   "dependencies": {
-    "@plasmohq/storage": "^1.10.0",
+    "@plasmohq/storage": "1.10.0",
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.58.2",
-    "@testing-library/dom": "^10.0.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^14.6.1",
+    "@playwright/test": "1.58.2",
+    "@testing-library/dom": "10.0.0",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.2",
+    "@testing-library/user-event": "14.6.1",
     "@types/chrome": "0.0.258",
-    "@types/node": "^20.19.0",
+    "@types/node": "20.19.0",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
-    "@vitest/coverage-v8": "^4.0.18",
-    "@vitest/ui": "^4.0.18",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.5",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.5.0",
-    "git-cliff": "^2.12.0",
-    "globals": "^17.3.0",
-    "happy-dom": "^20.6.0",
-    "jsdom": "^28.0.0",
-    "prettier": "^3.8.1",
+    "@typescript-eslint/eslint-plugin": "8.55.0",
+    "@typescript-eslint/parser": "8.55.0",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-react-refresh": "0.5.0",
+    "git-cliff": "2.12.0",
+    "globals": "17.3.0",
+    "happy-dom": "20.6.0",
+    "jsdom": "28.0.0",
+    "prettier": "3.8.1",
     "typescript": "5.3.3",
-    "vitest": "^4.0.18"
+    "vitest": "4.0.18"
   },
   "overrides": {
     "msgpackr": "1.11.8",
     "content-security-policy-parser": "0.6.0",
     "svelte": "4.2.19",
-    "esbuild": "0.25.0",
-    "yaml": "2.7.1"
+    "esbuild": "0.25.0"
   },
   "manifest": {
     "permissions": [
