--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -169,12 +169,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Cache Plasmo build
+      - name: Cache Plasmo cache
         uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306  # v5.0.3
         with:
-          path: |
-            .plasmo
-            build
+          path: .plasmo
           key: ${{ runner.os }}-plasmo-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-plasmo-
