ci(dependabot): 添加prettier到依赖更新配置
test(popup): 在cookie变更测试中使用fake timers

ci(sonarcloud): 添加SONAR_TOKEN检查并优化扫描流程

refactor(CookieList): 使用isInList优化白名单/黑名单过滤逻辑

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,6 +40,7 @@ updates:
           - "@typescript-eslint/*"
           - "@testing-library/*"
           - "@types/*"
+          - "prettier*"
       testing-framework:
         patterns:
           - "vitest*"
