--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -93,9 +93,15 @@ jobs:
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9  # v7.0.0
+        if: ${{ secrets.SONAR_TOKEN != '' }}
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+      - name: SonarCloud Scan (Skipped)
+        if: ${{ secrets.SONAR_TOKEN == '' }}
+        run: echo "SonarCloud scan skipped - SONAR_TOKEN not available (this is expected for fork PRs)"
 
   security:
     name: Security Scan
