--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,16 +19,19 @@ updates:
     reviewers:
       - "LJL-zy"
     cooldown:
-      default-days: 3
-      semver-major-days: 7
-      semver-minor-days: 3
-      semver-patch-days: 1
+      default-days: 7
+      semver-major-days: 14
+      semver-minor-days: 7
+      semver-patch-days: 3
     groups:
-      production-dependencies:
+      production-patch:
+        dependency-type: "production"
+        update-types:
+          - "patch"
+      production-minor:
         dependency-type: "production"
         update-types:
           - "minor"
-          - "patch"
       development-dependencies:
         dependency-type: "development"
         update-types:
@@ -66,6 +69,14 @@ updates:
       - dependency-name: "react-dom"
         update-types: ["version-update:semver-major"]
       - dependency-name: "typescript"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "tailwindcss"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "lucide-react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "clsx"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "tailwind-merge"
         update-types: ["version-update:semver-major"]
 
   - package-ecosystem: "github-actions"
