--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,17 +7,15 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   labeler:
     name: 根据文件路径自动添加标签
     runs-on: ubuntu-latest
     steps:
-      - name: 检出代码
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
-
       - name: 运行 Labeler
-        uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9  # v5.0.0
+        uses: actions/labeler@634933edcd8ababfe52f92936142cc22ac488b1b  # v6.0.1
         with:
           configuration-path: .github/labeler.yml
           repo-token: ${{ secrets.GITHUB_TOKEN }}
