--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,4 +1,4 @@
-name: Stale Issues and PRs
+name: 自动关闭不活跃 Issue 和 PR
 
 on:
   schedule:
@@ -11,11 +11,11 @@ permissions:
 
 jobs:
   stale:
-    name: Mark Stale
+    name: 标记不活跃
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - name: Mark stale issues and PRs
+      - name: 标记不活跃的 Issue 和 PR
         uses: actions/stale@b5d41d4e1d5dceea10e7104786b73624c18a190f  # v10.2.0
         with:
           days-before-stale: 30
@@ -30,8 +30,8 @@ jobs:
             由于长时间无活动，此 Pull Request 已自动关闭。如果您想继续此工作，请重新打开此 PR 或创建一个新的 PR。
           stale-issue-label: "stale"
           stale-pr-label: "stale"
-          exempt-issue-labels: "pinned,security,enhancement"
-          exempt-pr-labels: "pinned,security,enhancement"
+          exempt-issue-labels: "pinned,security,enhancement,待审核"
+          exempt-pr-labels: "pinned,security,enhancement,待审核,dependencies"
           exempt-draft-pr: true
           remove-stale-when-updated: true
           delete-branch: false
